- 05-28-04: Switched GM Command, #kill to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #hstyle to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #ccolor to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #hcolor to ALBGM system. [AlexKreuz]
- 05-28-04: Added ALBGM command usage succes/error message. [AlexKreuz]
- 05-28-04: Switched GM Command, #auto to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #die to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #return to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #save to ALBGM system. [AlexKreuz]
- 05-28-04: Fixed ALBGM ID non-existant caused crash. [AlexKreuz]
- 05-28-04: Switched GM Command, #item to ALBGM system. [AlexKreuz]
- 05-28-04: Switched GM Command, #alive to ALBGM system. [AlexKreuz]
- 05-28-04: Created access level based GM system (ALBGM) structure. [AlexKreuz]
- 05-28-04: Fixed Assassin can not equip two daggers. [AlexKreuz]
- 05-28-04: Added Option_Party_Share_Level - INI option for custom party share levels. [AlexKreuz]
- 05-28-04: Error checking for MOTD file added to prevent errors. [ChrstphrR]
- 05-28-04: Added Option_MOTD_Athena for an Athena style MOTD message - 1 line only. [ChrstphrR]
- 05-27-04: Added #888 - Feature Request: Option_PVP_Steal - INI option to steal from players. [AlexKreuz]
- 05-27-04: Added Option_MOTD (0/1) to enable on the fly messages. FeatureReq #445 [ChrstphrR]
- 05-27-04: Added Option_MOTD_File (RelativePath, 4 lines, 195char per, max) [ChrstphrR]
- 05-27-04: SendMOTD routine - sends up to 4 lines to newly-joining Characters. [ChrstphrR]
- 05-27-04: TChara - grouped constructor and destructor code closer together. [ChrstphrR]
- 05-27-04: ScriptValidatated - faster selection of proper JID for warp/hiddenwarp [ChrstphrR]
- 05-27-04: ScriptValidatated - ChrstphrR 'silently' changes his comment typo. [ChrstphrR]
- 05-26-04: PlayerDataLoad - Removed Unused Variables from var declaration. [ChrstphrR]